fixed align

--- a/src/MobileMapComponent.css
+++ b/src/MobileMapComponent.css
@@ -279,11 +279,11 @@
 }
 
 .center-above-list {
-  bottom: 420px;
+  bottom: 56vh;
 }
 
 .center-fullscreen {
-  bottom: 150px;
+  bottom: 20vh;
 }
 
 
